update post: Understanding De Morgan's Law in JavaScript

--- a/clkop3w8300000akuc61q01s4.md
+++ b/clkop3w8300000akuc61q01s4.md
@@ -3,7 +3,7 @@ title: "Understanding De Morgan's Law in JavaScript"
 datePublished: Sun Jul 30 2023 00:20:53 GMT+0000 (Coordinated Universal Time)
 cuid: clkop3w8300000akuc61q01s4
 slug: understanding-de-morgans-law-in-javascript
-cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1690631535928/bbfff73d-2b60-45e6-92b6-1cb6f180ff2d.png
+cover: https://cdn.hashnode.com/res/hashnode/image/stock/unsplash/BVr3XaBiWLU/upload/e26d8b9f26f38b562f549e85c2734b51.jpeg
 tags: javascript, 2articles1week, logical-operator, de-morgans-law
 
 ---
@@ -93,9 +93,7 @@ In short, || becomes && and && becomes ||. However, be cautious not to confuse t
 
 ## Practical Applications of De Morgan's Law in JavaScript
 
-1. Imagine you have multiple conditions combined with "AND" and "OR" in a `if` statement. De Morgan's Law can help you make it much simpler. You can change the "AND" conditions to "OR" conditions and flip each of them, or change the "OR" conditions to "AND" conditions and flip each of them. It's like solving a puzzle!
-    
-    Example:
+1. Imagine you have multiple conditions combined with "AND" and "OR" in a `if` statement. De Morgan's Law can help you make it much simpler. You can change the "AND" conditions to "OR" conditions and flip each of them, or change the "OR" conditions to "AND" conditions and flip each of them. It's like solving a puzzle.
     
     ```javascript
     // Before applying De Morgan's Law
@@ -110,8 +108,6 @@ In short, || becomes && and && becomes ||. However, be cautious not to confuse t
     ```
     
 2. Long and complicated conditions can make your code hard to read, like trying to understand a big puzzle. By using De Morgan's Law, you can rewrite those conditions into shorter and clearer ones. This makes your code much easier to understand, just like reading a simple story.
-    
-    Example:
     
     ```javascript
     // Before applying De Morgan's Law
@@ -129,8 +125,6 @@ In short, || becomes && and && becomes ||. However, be cautious not to confuse t
 ## Combining De Morgan's Law with Other Techniques
 
 1. De Morgan's Law can be used together with other techniques like conditional expressions (`if`, `else`, `else if`) and boolean operators (`&&`, `||`, `!`) to optimize complex conditions.
-    
-    Example:
     
     ```javascript
     // Complex condition before combining techniques
