update post: Understanding De Morgan's Law in JavaScript

--- a/clkop3w8300000akuc61q01s4.md
+++ b/clkop3w8300000akuc61q01s4.md
@@ -3,8 +3,8 @@ title: "Understanding De Morgan's Law in JavaScript"
 datePublished: Sun Jul 30 2023 00:20:53 GMT+0000 (Coordinated Universal Time)
 cuid: clkop3w8300000akuc61q01s4
 slug: understanding-de-morgans-law-in-javascript
-cover: https://cdn.hashnode.com/res/hashnode/image/stock/unsplash/BVr3XaBiWLU/upload/e26d8b9f26f38b562f549e85c2734b51.jpeg
-tags: javascript, 2articles1week, logical-operator, de-morgans-law
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1690724790555/b509ddf1-ed0c-4b42-a47b-4166a000e4a8.png
+tags: javascript, 2articles1week, logical-operator
 
 ---
 
