--- a/clkop3w8300000akuc61q01s4.md
+++ b/clkop3w8300000akuc61q01s4.md
@@ -8,7 +8,7 @@ tags: javascript, 2articles1week, logical-operator
 
 ---
 
-In this reading we will delve into the universe of De Morgan's Law in this reading, investigating each premise step by step and presenting practical examples along the way. We'll look at how these principles can be used to improve logical operations in JavaScript. You will be able to do the following by the end of this article:
+In this reading we will delve into the universe of De Morgan's Law, investigating each premise step by step and presenting practical examples along the way. We'll look at how these principles can be used to improve logical operations in JavaScript. You will be able to do the following by the end of this article:
 
 * Describe De Morgan's law and its implications.
     
