update post: Understanding De Morgan's Law in JavaScript

--- a/clkop3w8300000akuc61q01s4.md
+++ b/clkop3w8300000akuc61q01s4.md
@@ -8,7 +8,7 @@ tags: javascript, 2articles1week, logical-operator
 
 ---
 
-In this reading we will delve into the universe of De Morgan's Law, investigating each premise step by step and presenting practical examples along the way. We'll look at how these principles can be used to improve logical operations in JavaScript. You will be able to do the following by the end of this article:
+In this reading we will delve into the universe of De Morgan's Law, investigating each premise step by step and presenting practical examples. We'll look at how these principles can improve logical operations in JavaScript. You will be able to do the following by the end of this article:
 
 * Describe De Morgan's law and its implications.
     
@@ -71,24 +71,49 @@ In general, `X || Y && Z` is equivalent to `X || ( Y && Z )` where X, Y, and Z a
 
 ## De Morgan's Law
 
-De Morgan's Law states two simple rules:
+De Morgan's Law is a simple rule that helps us work with negations and logical operations. It has two parts:
 
-1. `!(X || Y)` is the same as `!X && !Y`.
+1. When you have a negation outside parentheses with an OR (||) operation, you can distribute the negation inside the parentheses as AND (&&) operations with negations.
     
-2. `!(X && Y)` is the same as `!X || !Y`.
+    Example:
+    
+    ```javascript
+    //Original
+    !(X || Y) 
+    //After applying De Morgan's Law: 
+    !X && !Y
+    ```
+    
+2. Similarly, when you have a negation outside parentheses with an AND (&&) operation, you can distribute the negation inside the parentheses as OR (||) operations with negations.
+    
+    Example:
+    
+    ```javascript
+    //Original
+    !(X && Y) 
+    //After applying De Morgan's Law
+    !X || !Y
+    ```
+    
+    De Morgan's Law states two simple rules:
+    
+    1. `!(X || Y)` is the same as `!X && !Y`.
+        
+    2. `!(X && Y)` is the same as `!X || !Y`.
+        
+
+So, in summary:
+
+* To change || (OR) to && (AND), apply negation inside the parentheses.
+    
+* To change && (AND) to || (OR), apply negation inside the parentheses.
     
 
-In simpler terms, when you have a negation outside parentheses with an `OR (||)` operation, you can distribute the negation inside the parentheses as `AND (&&)` operations with negations.
+But remember, the two forms are different:
 
-Likewise, if you have a negation outside parentheses with an `AND (&&)` operation, you can distribute the negation inside the parentheses as `OR (||)` operations with negations.
-
-In short, || becomes && and && becomes ||. However, be cautious not to confuse the two forms. Remember that:
-
-1. `!(X || Y)` is NOT the same as `!X || !Y`.
+* !(X || Y) is NOT the same as !X || !Y.
     
-2. `!(X && Y)` is NOT the same as `!X && !Y`.
-    
-    The property is called **De Morgan's Law**
+* !(X && Y) is NOT the same as !X && !Y.
     
 
 ## Practical Applications of De Morgan's Law in JavaScript
